# SmartHouse

./: CMakeLists.txt  DATA_FORMATS.md  README.md
.cache/clangd/index/: AuthenticationService.cpp.FD3AE3298323E823.idx  AuthenticationService.hpp.5227B70984D7A24B.idx  AutomationService.cpp.461C84C56BB8AE8E.idx  AutomationService.hpp.49BD61B0D3919DBB.idx  ClimateData.cpp.331721B457E6CDDC.idx  ClimateData.hpp.20228D355F2A8601.idx  ClimateFileManager.cpp.B4B442D28077A944.idx  ClimateFileManager.hpp.803ABDF4BAB1EDC0.idx  ClimateNormalizer.cpp.A9B33AC5A45C6814.idx  ClimateNormalizer.hpp.69FFAE74E02EA3A6.idx  CommandHistory.cpp.BEFE18E4E6A2C71B.idx  CommandHistory.hpp.71D765D480EE72D9.idx  ContainerException.cpp.563FAAB0485FA972.idx  ContainerException.hpp.79429DD7B3914712.idx  Device.cpp.1B3418E6F6CAA52E.idx  Device.hpp.CBBD58D8B1D76B6C.idx  (+47 more)
exceptions/include/: ContainerException.hpp  Exception.hpp  FileException.hpp  InputException.hpp
main/: main.cpp
models/include/: DeviceContainer.hpp  EnvironmentSimulator.hpp  Sensor.hpp  SmartHome.hpp  User.hpp
models/src/: DeviceContainer.cpp  EnvironmentSimulator.cpp  Sensor.cpp  SmartHome.cpp  User.cpp
repositories/include/: DeviceRepository.hpp  SensorRepository.hpp  UserRepository.hpp
repositories/src/: DeviceRepository.cpp  SensorRepository.cpp  UserRepository.cpp
services/include/: AuthenticationService.hpp  AutomationService.hpp  ClimateData.hpp  ClimateFileManager.hpp  ClimateNormalizer.hpp  CommandHistory.hpp  DeviceService.hpp
services/src/: AuthenticationService.cpp  AutomationService.cpp  ClimateData.cpp  ClimateFileManager.cpp  ClimateNormalizer.cpp  CommandHistory.cpp  DeviceService.cpp
utils/include/: InputUtils.hpp  Menu.hpp
utils/src/: InputUtils.cpp  Menu.cpp
(+19 files in other folders)
